fix(webui): Images go way offscreen in gallery mode

--- a/webservice/www/new-ui/styles.css
+++ b/webservice/www/new-ui/styles.css
@@ -31,6 +31,10 @@
         }
     }
 
+    #gallery-items img {
+        width: 50cqb;
+    }
+
     #view-all {
         vertical-align: bottom;
     }
